--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=EduNexus-user_and_role_management
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/edunexus?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://47.100.171.209:3306/edunexus?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=ll157301
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MyBatis Configuration
@@ -19,11 +19,11 @@ server.port=8080
 logging.level.com.no99.edunexususer_and_role_management.mapper=debug
 
 # Nacos Configuration (Disabled)
-spring.cloud.nacos.discovery.enabled=true
-spring.cloud.nacos.config.enabled=true
-spring.cloud.discovery.enabled=true
-spring.cloud.config.enabled=true
- spring.cloud.nacos.config.server-addr=localhost:8848
+spring.cloud.nacos.discovery.enabled=false
+spring.cloud.nacos.config.enabled=false
+spring.cloud.discovery.enabled=false
+spring.cloud.config.enabled=false
+ spring.cloud.nacos.config.server-addr=47.100.171.209:8848
  spring.config.import=optional:nacos:EduNexus-user_and_role_management.properties
 
 # JWT Configuration
