feat: enable Nacos configuration for service discovery and config management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ server.port=8080
 logging.level.com.no99.edunexususer_and_role_management.mapper=debug
 
 # Nacos Configuration (Disabled)
-spring.cloud.nacos.discovery.enabled=false
-spring.cloud.nacos.config.enabled=false
-spring.cloud.discovery.enabled=false
-spring.cloud.config.enabled=false
+spring.cloud.nacos.discovery.enabled=true
+spring.cloud.nacos.config.enabled=true
+spring.cloud.discovery.enabled=true
+spring.cloud.config.enabled=true
  spring.cloud.nacos.config.server-addr=47.100.171.209:8848
  spring.config.import=optional:nacos:EduNexus-user_and_role_management.properties
 
