feat: configure Nacos settings and add Swagger documentation for user and role management API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,12 +19,13 @@ server.port=8080
 logging.level.com.no99.edunexususer_and_role_management.mapper=debug
 
 # Nacos Configuration (Disabled)
-spring.cloud.nacos.discovery.enabled=true
-spring.cloud.nacos.config.enabled=true
-spring.cloud.discovery.enabled=true
-spring.cloud.config.enabled=true
- spring.cloud.nacos.config.server-addr=47.100.171.209:8848
- spring.config.import=optional:nacos:EduNexus-user_and_role_management.properties
+nacos_available=true
+spring.cloud.nacos.discovery.enabled=${nacos_available}
+spring.cloud.nacos.config.enabled=${nacos_available}
+spring.cloud.discovery.enabled=${nacos_available}
+spring.cloud.config.enabled=${nacos_available}
+spring.cloud.nacos.config.server-addr=47.100.171.209:8848
+spring.config.import=optional:nacos:EduNexus-user_and_role_management.properties
 
 # JWT Configuration
 jwt.secret=user_and_role_management_secret_key
