--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=EduNexus-user_and_role_management
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://47.100.171.209:3306/edunexus?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=ll157301
+# 使用环境变量配置数据库连接，方便Docker容器化部署
+spring.datasource.url=jdbc:mysql://${DB_HOST:mysql}:${DB_PORT:3306}/${DB_NAME:edunexus}?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:ll157301}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MyBatis Configuration
@@ -19,17 +20,13 @@ server.port=8080
 logging.level.com.no99.edunexususer_and_role_management.mapper=debug
 
 # Nacos Configuration (Disabled)
-nacos_available=true
+nacos_available=${NACOS_ENABLED:false}
 spring.cloud.nacos.discovery.enabled=${nacos_available}
 spring.cloud.nacos.config.enabled=${nacos_available}
 spring.cloud.discovery.enabled=${nacos_available}
 spring.cloud.config.enabled=${nacos_available}
-spring.cloud.nacos.config.server-addr=47.100.171.209:8848
+spring.cloud.nacos.config.server-addr=${NACOS_SERVER_ADDR:47.100.171.209:8848}
 spring.config.import=optional:nacos:EduNexus-user_and_role_management.properties
-
-# JWT Configuration
-jwt.secret=user_and_role_management_secret_key
-jwt.expiration=86400000
 
 # Swagger Configuration
 springdoc.api-docs.path=/v3/api-docs
