feat: Update security configuration to allow unauthenticated access to Swagger UI and health check endpoints, and adjust API paths.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,13 +28,19 @@ spring.cloud.config.enabled=${nacos_available}
 spring.cloud.nacos.config.server-addr=${NACOS_SERVER_ADDR:47.100.171.209:8848}
 spring.config.import=optional:nacos:EduNexus-user_and_role_management.properties
 
-# Swagger Configuration
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.filter=true
-springdoc.swagger-ui.use-root-path=false
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.doc-expansion=none
+# 明确指定 API 文档的 URL
+springdoc.swagger-ui.urls[0].name=用户与角色管理 API
+springdoc.swagger-ui.urls[0].url=/v3/api-docs
 
